KubernetesLab/ejercicio3/configFiles/todoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  ports:
  - port: 3000
    targetPort: 3000
