KubernetesLab/ejercicio3/configFiles/todofront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
spec:
  selector:
    app: todo-front
  ports:
  - port: 80
    targetPort: 80
