KubernetesLab/ejercicio3/configFiles/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    name: todo-ingress
spec:
  rules:
  - host: ingress.local
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api-service 
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front-service 
            port: 
              number: 80
